# original_performance_takehome

./: .gitignore  .pre-commit-config  AGENTS.md  CLAUDE.md  kernel_hash.py  kernel_memory.py  kernel_scheduler.py  kernel_traversal.py  perf_takehome.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: control-flow-critic.agent.md  control-flow-expert.agent.md  docs-critic.agent.md  docs-expert.agent.md  ilp-schedule-critic.agent.md  ilp-schedule-expert.agent.md  memory-opt-critic.agent.md  memory-opt-expert.agent.md  pipeline-runner.agent.md  plan-critic.agent.md  planner.agent.md  project-manager.agent.md  researcher.agent.md  simd-vect-critic.agent.md  simd-vect-expert.agent.md
.github/prompts/: agents.prompt.md  artifacts.prompt.md  workflow.prompt.md
.github/skills/context-md-formatting/: SKILL.md
.github/skills/copilot-cli-subagent-running/: SKILL.md  run-subagent.sh
.github/skills/copilot-cli-subagent-running/scripts/: common-utils.sh  run-subagent.sh  sandbox-cleanup.sh  sandbox-create.sh  snapshot-utils.sh
.github/skills/impl-refine-cycle-running/: SKILL.md
.github/skills/plan-md-formatting/: SKILL.md
.github/skills/python-docs-covering/: SKILL.md
.github/skills/python-linting/: SKILL.md
.github/skills/report-md-formatting/: SKILL.md
.github/skills/step-md-formatting/: SKILL.md
.github/skills/task-md-tecc-formatting/: SKILL.md
.github/skills/workflow-cycle-running/: SKILL.md
