[project]
name = "original-performance-takehome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "coverage>=7.13.2",
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.4",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "numpydoc>=1.10.0",
    "pre-commit>=4.5.1",
    "pre-commit-hooks>=6.0.0",
    "pydocstyle>=6.3.0",
]

[tool.uv]
index-strategy = "first-index"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
lines_after_imports = 2
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["findiff", "findiff.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["problem"]
ignore_errors = true
